# email-newsletter

./: Cargo.toml  Dockerfile  README.md  configuration.yml  deny.toml
.github/workflows/: rust.yml
.sqlx/: query-324631b86511227979abab85ceea6c79ea5094fad4cd4a7cdbefd84f40af4212.json  query-77464b2f3e55564cb5f5c5f20c841476ec5dec567db5f70ffbc2b7283f24d0d9.json
configuration/: base.yml  local.yml
migrations/: 20250203201827_create_subscriptions_table.sql  20250222192741_add_status_to_subscriptions.sql  20250222193558_make_status_not_null_in_subscriptions.sql  20250222194249_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
