[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_newsletter"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
serde = "1.0.217"
config = { version = "0.15", default-features = false, features = ["yaml"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.15"
serde-aux = "4.5.0"
unicode-segmentation = "1.12.0"
validator = "0.20.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
secrecy = { version = "0.10.3", features = ["serde"] }
rand = { version = "0.9.0", features = ["std_rng"] }
thiserror = "2.0.11"
anyhow = "1.0.96"

[dev-dependencies]
claims = "0.8.0"
fake = "4"
linkify = "0.10.0"
once_cell = "1.20.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.9.0"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.138"
wiremock = "0.6.2"
